# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto"
version = "0.3.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Cross-platform cryptographic primitives, key formats, and conformance-tested provider bindings."
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]

[dependencies]
buffa = { workspace = true, optional = true }
crypto-core = { package = "reallyme-crypto-core", version = "=0.3.2", path = "core" }
crypto-dispatch = { package = "reallyme-crypto-dispatch", version = "=0.3.2", path = "dispatch", optional = true, default-features = false }
crypto-proto = { package = "reallyme-crypto-proto", version = "=0.3.2", path = "../proto", optional = true, default-features = false, features = ["generated"] }
crypto-signer = { package = "reallyme-crypto-signer", version = "=0.3.2", path = "signer", optional = true, default-features = false }
crypto-aes-kw = { package = "reallyme-crypto-aes-kw", version = "=0.3.2", path = "../aes-kw", optional = true, default-features = false }
crypto-aes256-gcm = { package = "reallyme-crypto-aes256-gcm", version = "=0.3.2", path = "../aes256-gcm", optional = true, default-features = false }
crypto-aes256-gcm-siv = { package = "reallyme-crypto-aes256-gcm-siv", version = "=0.3.2", path = "../aes256-gcm-siv", optional = true, default-features = false }
crypto-argon2id = { package = "reallyme-crypto-argon2id", version = "=0.3.2", path = "../argon2id", optional = true, default-features = false }
crypto-chacha20-poly1305 = { package = "reallyme-crypto-chacha20-poly1305", version = "=0.3.2", path = "../chacha20-poly1305", optional = true, default-features = false }
crypto-concat-kdf = { package = "reallyme-crypto-concat-kdf", version = "=0.3.2", path = "../concat-kdf", optional = true, default-features = false }
crypto-constant-time = { package = "reallyme-crypto-constant-time", version = "=0.3.2", path = "../constant-time", optional = true, default-features = false }
crypto-csprng = { package = "reallyme-crypto-csprng", version = "=0.3.2", path = "../csprng", optional = true, default-features = false }
crypto-ed25519 = { package = "reallyme-crypto-ed25519", version = "=0.3.2", path = "../ed25519", optional = true, default-features = false }
crypto-hmac = { package = "reallyme-crypto-hmac", version = "=0.3.2", path = "../hmac", optional = true, default-features = false }
crypto-hkdf = { package = "reallyme-crypto-hkdf", version = "=0.3.2", path = "../hkdf", optional = true, default-features = false }
crypto-kmac = { package = "reallyme-crypto-kmac", version = "=0.3.2", path = "../kmac", optional = true, default-features = false }
crypto-ml-dsa-44 = { package = "reallyme-crypto-ml-dsa-44", version = "=0.3.2", path = "../ml-dsa-44", optional = true, default-features = false }
crypto-ml-dsa-65 = { package = "reallyme-crypto-ml-dsa-65", version = "=0.3.2", path = "../ml-dsa-65", optional = true, default-features = false }
crypto-ml-dsa-87 = { package = "reallyme-crypto-ml-dsa-87", version = "=0.3.2", path = "../ml-dsa-87", optional = true, default-features = false }
crypto-ml-kem-512 = { package = "reallyme-crypto-ml-kem-512", version = "=0.3.2", path = "../ml-kem-512", optional = true, default-features = false }
crypto-ml-kem-1024 = { package = "reallyme-crypto-ml-kem-1024", version = "=0.3.2", path = "../ml-kem-1024", optional = true, default-features = false }
crypto-ml-kem-768 = { package = "reallyme-crypto-ml-kem-768", version = "=0.3.2", path = "../ml-kem-768", optional = true, default-features = false }
crypto-p256 = { package = "reallyme-crypto-p256", version = "=0.3.2", path = "../p256", optional = true, default-features = false }
crypto-p384 = { package = "reallyme-crypto-p384", version = "=0.3.2", path = "../p384", optional = true, default-features = false }
crypto-p521 = { package = "reallyme-crypto-p521", version = "=0.3.2", path = "../p521", optional = true, default-features = false }
crypto-pbkdf2 = { package = "reallyme-crypto-pbkdf2", version = "=0.3.2", path = "../pbkdf2", optional = true, default-features = false }
crypto-rsa = { package = "reallyme-crypto-rsa", version = "=0.3.2", path = "../rsa", optional = true, default-features = false }
crypto-secp256k1 = { package = "reallyme-crypto-secp256k1", version = "=0.3.2", path = "../secp256k1", optional = true, default-features = false }
crypto-sha2 = { package = "reallyme-crypto-sha2", version = "=0.3.2", path = "../sha2", optional = true, default-features = false }
crypto-sha2-256 = { package = "reallyme-crypto-sha2-256", version = "=0.3.2", path = "../sha2-256", optional = true, default-features = false }
crypto-sha3 = { package = "reallyme-crypto-sha3", version = "=0.3.2", path = "../sha3", optional = true, default-features = false }
crypto-sha3-256 = { package = "reallyme-crypto-sha3-256", version = "=0.3.2", path = "../sha3-256", optional = true, default-features = false }
crypto-slh-dsa = { package = "reallyme-crypto-slh-dsa", version = "=0.3.2", path = "../slh-dsa", optional = true, default-features = false }
crypto-x25519 = { package = "reallyme-crypto-x25519", version = "=0.3.2", path = "../x25519", optional = true, default-features = false }
crypto-x-wing = { package = "reallyme-crypto-x-wing", version = "=0.3.2", path = "../x-wing", optional = true, default-features = false }
crypto-hpke = { package = "reallyme-crypto-hpke", version = "=0.3.2", path = "../hpke", optional = true, default-features = false }
envelopes-jwk = { package = "reallyme-crypto-jwk", version = "=0.3.2", path = "../jwk", optional = true, default-features = false }
envelopes-jwk-multikey = { package = "reallyme-crypto-jwk-multikey", version = "=0.3.2", path = "../jwk-multikey", optional = true, default-features = false }
thiserror = { workspace = true }
zeroize = { workspace = true }

[features]
default = [
    "native",
    "aes",
    "aes-gcm-siv",
    "argon2id",
    "chacha20-poly1305",
    "concat-kdf",
    "constant-time",
    "csprng",
    "dispatch",
    "signer",
    "aes-kw",
    "ed25519",
    "hmac",
    "p256",
    "p384",
    "p521",
    "pbkdf2",
    "rsa",
    "secp256k1",
    "x25519",
    "hkdf",
    "kmac",
    "ml-dsa-44",
    "ml-dsa-65",
    "ml-dsa-87",
    "ml-kem-512",
    "ml-kem-768",
    "ml-kem-1024",
    "sha2",
    "sha3",
    "slh-dsa",
    "x-wing",
    "hpke",
    "envelopes",
]

messaging-primitives = [
    "chacha20-poly1305",
    "hkdf",
    "hmac",
    "ml-kem-768",
    "sha2",
    "x25519",
]

native = [
    "envelopes-jwk?/native",
    "envelopes-jwk-multikey?/native",
    "crypto-dispatch?/native",
    "crypto-signer?/native",
    "crypto-aes-kw?/native",
    "crypto-aes256-gcm?/native",
    "crypto-aes256-gcm-siv?/native",
    "crypto-argon2id?/native",
    "crypto-chacha20-poly1305?/native",
    "crypto-concat-kdf?/native",
    "crypto-constant-time?/native",
    "crypto-csprng?/native",
    "crypto-ed25519?/native",
    "crypto-hmac?/native",
    "crypto-hkdf?/native",
    "crypto-kmac?/native",
    "crypto-ml-dsa-44?/native",
    "crypto-ml-dsa-65?/native",
    "crypto-ml-dsa-87?/native",
    "crypto-ml-kem-512?/native",
    "crypto-ml-kem-1024?/native",
    "crypto-ml-kem-768?/native",
    "crypto-p256?/native",
    "crypto-p384?/native",
    "crypto-p521?/native",
    "crypto-pbkdf2?/native",
    "crypto-rsa?/native",
    "crypto-secp256k1?/native",
    "crypto-sha2?/native",
    "crypto-sha2-256?/native",
    "crypto-sha3?/native",
    "crypto-sha3-256?/native",
    "crypto-slh-dsa?/native",
    "crypto-x25519?/native",
    "crypto-x-wing?/native",
    "crypto-hpke?/backend-native",
]
wasm = [
    "envelopes-jwk?/wasm",
    "envelopes-jwk-multikey?/wasm",
    "crypto-dispatch?/wasm",
    "crypto-signer?/wasm",
    "crypto-aes-kw?/wasm",
    "crypto-aes256-gcm?/wasm",
    "crypto-aes256-gcm-siv?/wasm",
    "crypto-argon2id?/wasm",
    "crypto-chacha20-poly1305?/wasm",
    "crypto-concat-kdf?/wasm",
    "crypto-constant-time?/wasm",
    "crypto-csprng?/wasm",
    "crypto-ed25519?/wasm",
    "crypto-hmac?/wasm",
    "crypto-hkdf?/wasm",
    "crypto-kmac?/wasm",
    "crypto-ml-dsa-44?/wasm",
    "crypto-ml-dsa-65?/wasm",
    "crypto-ml-dsa-87?/wasm",
    "crypto-ml-kem-512?/wasm",
    "crypto-ml-kem-1024?/wasm",
    "crypto-ml-kem-768?/wasm",
    "crypto-p256?/wasm",
    "crypto-p384?/wasm",
    "crypto-p521?/wasm",
    "crypto-pbkdf2?/wasm",
    "crypto-rsa?/wasm",
    "crypto-secp256k1?/wasm",
    "crypto-sha2?/wasm",
    "crypto-sha2-256?/wasm",
    "crypto-sha3?/wasm",
    "crypto-sha3-256?/wasm",
    "crypto-slh-dsa?/wasm",
    "crypto-x25519?/wasm",
    "crypto-x-wing?/wasm",
    "crypto-hpke?/backend-native",
]

aes = ["dep:crypto-aes256-gcm"]
aes-kw = ["dep:crypto-aes-kw"]
aes-gcm-siv = ["dep:crypto-aes256-gcm-siv"]
argon2id = ["dep:crypto-argon2id"]
chacha20-poly1305 = ["dep:crypto-chacha20-poly1305"]
concat-kdf = ["dep:crypto-concat-kdf"]
constant-time = ["dep:crypto-constant-time"]
csprng = ["dep:crypto-csprng"]
dispatch = ["dep:crypto-dispatch"]
operation-response = [
    "dep:buffa",
    "dep:crypto-proto",
]
signer = ["dep:crypto-signer", "dispatch"]
ed25519 = ["dep:crypto-ed25519", "dispatch", "crypto-dispatch?/ed25519", "crypto-signer?/ed25519"]
hmac = ["dep:crypto-hmac"]
hkdf = ["dep:crypto-hkdf"]
kmac = ["dep:crypto-kmac"]
p256 = ["dep:crypto-p256", "dispatch", "crypto-dispatch?/p256", "crypto-signer?/p256"]
p384 = ["dep:crypto-p384", "dispatch", "crypto-dispatch?/p384", "crypto-signer?/p384"]
p521 = ["dep:crypto-p521", "dispatch", "crypto-dispatch?/p521", "crypto-signer?/p521"]
pbkdf2 = ["dep:crypto-pbkdf2"]
rsa = ["dep:crypto-rsa", "dispatch"]
secp256k1 = ["dep:crypto-secp256k1", "dispatch", "crypto-dispatch?/secp256k1", "crypto-signer?/secp256k1"]
x25519 = ["dep:crypto-x25519", "dispatch", "crypto-dispatch?/x25519"]
x-wing = ["dep:crypto-x-wing", "dispatch", "crypto-dispatch?/x-wing"]
hpke-api = ["dep:crypto-hpke"]
hpke = ["hpke-api", "crypto-hpke/native"]
hpke-openmls = ["hpke-api", "crypto-hpke/openmls"]
test-vectors = ["hpke", "crypto-hpke/test-vectors"]
ml-dsa-44 = ["dep:crypto-ml-dsa-44", "dispatch", "crypto-dispatch?/ml-dsa-44", "crypto-signer?/ml-dsa-44"]
ml-dsa-65 = ["dep:crypto-ml-dsa-65", "dispatch", "crypto-dispatch?/ml-dsa-65", "crypto-signer?/ml-dsa-65"]
ml-dsa-87 = ["dep:crypto-ml-dsa-87", "dispatch", "crypto-dispatch?/ml-dsa-87", "crypto-signer?/ml-dsa-87"]
ml-kem-512 = ["dep:crypto-ml-kem-512", "dispatch", "crypto-dispatch?/ml-kem-512"]
ml-kem-768 = ["dep:crypto-ml-kem-768", "dispatch", "crypto-dispatch?/ml-kem-768"]
ml-kem-1024 = ["dep:crypto-ml-kem-1024", "dispatch", "crypto-dispatch?/ml-kem-1024"]
sha2 = ["dep:crypto-sha2-256", "dep:crypto-sha2"]
sha3 = ["dep:crypto-sha3-256", "dep:crypto-sha3", "crypto-hkdf?/sha3"]
slh-dsa = ["dep:crypto-slh-dsa", "dispatch"]
envelopes = ["jwk", "jwk-multikey"]
jwk = ["dep:envelopes-jwk"]
jwk-multikey = ["dep:envelopes-jwk-multikey", "jwk"]

[dev-dependencies]
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
