# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-csprng"
version = "0.3.1"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
publish = true
description = "Cryptographically secure random byte generation for ReallyMe Crypto."
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # Enables getrandom's wasm JS entropy backend for wasm32-unknown-unknown.
    "getrandom",
]

[lib]
name = "crypto_csprng"

[features]
default = []
native = []
wasm = ["getrandom/wasm_js"]

[dependencies]
crypto-core = { package = "reallyme-crypto-core", version = "0.3.1", path = "../crypto/core" }
getrandom = { workspace = true, features = ["sys_rng"] }
secrecy = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

[lints]
workspace = true
