# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-ed25519"
version = "0.3.2"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Ed25519 signing primitive for ReallyMe Crypto."

[lib]
name = "crypto_ed25519"

[features]
default = [ ]

native = [
    "crypto-csprng/native",
    "dep:ed25519-dalek",
    "dep:crypto-csprng",
]

# Platform backends
wasm = [
    "crypto-csprng/wasm",
    "dep:ed25519-dalek",
    "dep:crypto-csprng",
]


[dependencies]
crypto-core = { package = "reallyme-crypto-core", version = "=0.3.2", path = "../crypto/core" }
crypto-csprng = { package = "reallyme-crypto-csprng", version = "=0.3.2", path = "../csprng", optional = true, default-features = false }
zeroize = { workspace = true }

# -----------------------------
# Native-only crypto deps
# -----------------------------
ed25519-dalek = { workspace = true, features = ["zeroize"], optional = true }

[dev-dependencies]
hex = { workspace = true }
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
