# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-hkdf"
version = "0.3.0"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
publish = true
description = "HKDF key derivation primitive for ReallyMe Crypto."
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # Enables getrandom's wasm entropy backend for the transitive digest stack.
    "getrandom",
]

[lib]
name = "crypto_hkdf"

[features]
default = []
native = []
wasm = ["dep:getrandom"]
sha3 = ["dep:sha3"]

[dependencies]
crypto-core = { package = "reallyme-crypto-core", version = "0.3.0", path = "../crypto/core" }
getrandom = { workspace = true, features = ["wasm_js"], optional = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true, optional = true }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
hex-literal = { workspace = true }

[lints]
workspace = true
