# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-hmac"
version = "0.3.0"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
publish = true
description = "HMAC-SHA-256, HMAC-SHA-384, and HMAC-SHA-512 primitives for ReallyMe Crypto."
license.workspace = true
repository.workspace = true

[lib]
name = "crypto_hmac"

[features]
default = []
native = []
wasm = []

[dependencies]
crypto-core = { package = "reallyme-crypto-core", version = "0.3.0", path = "../crypto/core" }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
hex-literal = { workspace = true }

[lints]
workspace = true
