# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-jwk-multikey"
version = "0.3.2"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "JWK and Multikey public-key envelope conversion for ReallyMe Crypto."

[lib]
name = "envelopes_jwk_multikey"

[features]
default = []

native = ["envelopes-jwk/native"]

wasm = ["envelopes-jwk/wasm"]

[dependencies]
thiserror.workspace = true

# multikey codec (decode / encode)
codec-multikey = { package = "reallyme-codec-multikey", version = "0.2.0" }

# JWK envelope
envelopes-jwk = { package = "reallyme-crypto-jwk", version = "=0.3.2", path = "../jwk", default-features = false }

[dev-dependencies]
codec-base64url = { package = "reallyme-codec-base64url", version = "0.2.0" }
crypto-core = { package = "reallyme-crypto-core", version = "=0.3.2", path = "../crypto/core" }
crypto-dispatch = { package = "reallyme-crypto-dispatch", version = "=0.3.2", path = "../crypto/dispatch", default-features = false, features = ["native", "p256"] }

[lints]
workspace = true
