# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-jwk"
version = "0.3.2"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "JWK envelope encoding and canonicalization for ReallyMe Crypto keys."

[lib]
name = "envelopes_jwk"

[features]
default = ["native"]

native = [
    "crypto-p256/native",
    "crypto-secp256k1/native",
]

wasm = [
    "crypto-p256/wasm",
    "crypto-secp256k1/wasm",
]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

codec-base64url = { package = "reallyme-codec-base64url", version = "0.2.0" }
codec-jcs = { package = "reallyme-codec-jcs", version = "0.2.0" }
crypto-p256 = { package = "reallyme-crypto-p256", version = "=0.3.2", path = "../p256", default-features = false }
crypto-secp256k1 = { package = "reallyme-crypto-secp256k1", version = "=0.3.2", path = "../secp256k1", default-features = false }

thiserror.workspace = true

[lints]
workspace = true
