# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-p256"
version = "0.3.2"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "P-256 ECDSA and ECDH primitives for ReallyMe Crypto."

[lib]
name = "crypto_p256"

[features]
default = []

native = [
    "dep:p256",
    "p256/ecdh",
    "p256/ecdsa",
    "p256/getrandom",
    "p256/pkcs8",
    "p256/std",
    "dep:codec-pem",
    "dep:ecdsa",
    "dep:sha2",
]

wasm = [
    "dep:getrandom",
    "dep:p256",
    "p256/ecdh",
    "p256/ecdsa",
    "p256/getrandom",
    "p256/std",
    "dep:ecdsa",
    "dep:sha2",
]

[dependencies]
crypto-core = { package = "reallyme-crypto-core", version = "=0.3.2", path = "../crypto/core" }
codec-pem = { package = "reallyme-codec-pem", version = "0.2.0", optional = true }
zeroize = { workspace = true }

# -----------------------------
# Native-only crypto deps
# -----------------------------
# NOTE: p256 0.14 has no `zeroize` cargo feature; zeroization support is
# unconditional in elliptic-curve 0.14 (SecretKey zeroizes on drop).
p256 = { workspace = true, default-features = false, optional = true }
ecdsa = { workspace = true, features = ["der"], optional = true }
getrandom = { workspace = true, features = ["wasm_js"], optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }

[lints]
workspace = true
