# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-p521"
version = "0.3.2"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "P-521 ECDSA primitive for ReallyMe Crypto."

[package.metadata.cargo-machete]
ignored = [
    # Enables getrandom's wasm entropy backend for the transitive elliptic-curve stack.
    "getrandom",
]

[lib]
name = "crypto_p521"

[features]
default = []
native = ["dep:p521", "dep:ecdsa", "dep:sha2", "dep:getrandom"]
wasm = ["native", "dep:getrandom"]

[dependencies]
crypto-core = { package = "reallyme-crypto-core", version = "=0.3.2", path = "../crypto/core" }
zeroize = { workspace = true }

p521 = { workspace = true, features = ["ecdh", "ecdsa"], optional = true }
ecdsa = { workspace = true, features = ["der"], optional = true }
sha2 = { workspace = true, optional = true }
getrandom = { workspace = true, features = ["wasm_js"], optional = true }

[lints]
workspace = true
