# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-rsa"
version = "0.3.3"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "RSA signature verification primitive for ReallyMe Crypto."

[lib]
name = "crypto_rsa"

[features]
default = ["native"]
native = []
wasm = []

[dependencies]
crypto-core = { package = "reallyme-crypto-core", version = "=0.3.3", path = "../crypto/core" }
sha1 = { workspace = true }
sha2 = { workspace = true }
crypto-bigint = { workspace = true }
const-oid = { workspace = true }
spki = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }

[lints]
workspace = true
