# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-sha3"
version = "0.3.2"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
publish = true
description = "SHA-3 digest primitives for ReallyMe Crypto."
license.workspace = true
repository.workspace = true

[lib]
name = "crypto_sha3"

[features]
default = []
native = []
wasm = []

[dependencies]
sha3 = { workspace = true }
shake = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
hex = { workspace = true }

[lints]
workspace = true
